# GPU-DBMS

./: .gitignore  CMakeLists.txt  Project_doc.txt  check_cuda_memory.cu  cli.sh  cmds.sh  gpudbms_profile.nsys-rep  gpudbms_profile.sqlite  run.sh  t
data/: generateScript.py
data/input_csvs/: Addresses.csv  Products.csv  SalesOrders.csv  Students.csv  users.csv
data/outputs/csv/: outputMah.csv.csv  rrrrr.csv
include/CLI/: CommandLineInterface.hpp  InputParser.hpp  ResultDisplayer.hpp
include/DataHandling/: CSVProcessor.hpp  Condition.hpp  ConditionGPU.cuh  StorageManager.hpp  Table.hpp
include/Operations/: Aggregator.hpp  AggregatorGPU.cuh  Filter.hpp  Join.hpp  JoinGPU.cuh  OrderBy.hpp  OrderByGPU.cuh  Project.hpp  ProjectGPU.cuh  Select.hpp  SelectGPU.cuh
include/QueryProcessing/: ASTProcessor.hpp  PlanBuilder.hpp  QueryExecutor.hpp  SubqueryHandler.hpp
include/SQLProcessing/: SQLQueryProcessor.hpp
include/Utilities/: ErrorHandling.hpp  GPU.cuh  Logger.hpp  StringUtils.hpp
src/: main.cpp
src/CLI/: CommandLineInterface.cpp  ResultDisplayer.cpp
src/DataHandling/: CSVProcessor.cpp  Condition.cpp  ConditionGPU.cu  StorageManager.cpp  Table.cpp
src/Operations/: Aggregator.cpp  AggregatorGPU.cu  Filter.cpp  Join.cpp  JoinGPU.cu  OrderBy.cpp  OrderByGPU.cu  Project.cpp  ProjectGPU.cu  Select.cpp  SelectGPU.cu
src/QueryProcessing/: ASTProcessor.cpp  PlanBuilder.cpp  QueryExecutor.cpp  SubqueryHandler.cpp
src/SQLProcessing/: SQLQueryProcessor.cpp
src/Utilities/: ErrorHandling.cpp  GPU.cu  Logger.cpp  StringUtils.cpp
